StyleScheme: invalidate the style context

Invalidate the GtkStyleContext when a GtkCssProvider is added or
removed. It is needed because the new style information is requested
immediately. See https://bugzilla.gnome.org/show_bug.cgi?id=708583