gtksourceview/gtksourcestylescheme.c
@@ -733,6 +733,8 @@ _gtk_source_style_scheme_apply (GtkSourceStyleScheme *scheme,
 	                                GTK_STYLE_PROVIDER (scheme->priv->css),
 	                                GTK_STYLE_PROVIDER_PRIORITY_APPLICATION);
 
+	gtk_style_context_invalidate (context);
+
 	style = gtk_source_style_scheme_get_style (scheme, STYLE_LINE_NUMBERS);
 	set_line_numbers_style (widget, style);
 
@@ -762,6 +764,7 @@ _gtk_source_style_scheme_unapply (GtkSourceStyleScheme *scheme,
 	context = gtk_widget_get_style_context (GTK_WIDGET (widget));
 	gtk_style_context_remove_provider (context,
 	                                   GTK_STYLE_PROVIDER (scheme->priv->css));
+	gtk_style_context_invalidate (context);
 	set_line_numbers_style (widget, NULL);
 	update_cursor_colors (widget, NULL, NULL);
 }
